@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: makeweights.c,v 1.20 2008/01/17 22:28:05 Superfly_Jon Exp $
+ * $Id: makeweights.c,v 1.21 2008/07/13 19:09:35 c_anthon Exp $
  */
 
 #include "config.h"
@@ -24,6 +24,7 @@
 #include <stdio.h>
 #include <stdlib.h>
 #include <glib/gi18n.h>
+#include <glib/gstdio.h>
 #include <locale.h>
 #include "eval.h" /* for WEIGHTS_VERSION */
 
@@ -53,14 +54,14 @@ extern int main( int argc, char *argv[] )
 
 		if (argc > arg + 2)
 			usage (argv[0]);
-		if ((output = fopen (argv[arg], "wb")) == 0)
+		if ((output = g_fopen (argv[arg], "wb")) == 0)
 		{
 			perror ("Can't open output file");
 			exit (1);
 		}
 		if (argc == arg + 2)
 		{
-			if ((input = fopen(argv[arg + 1], "r")) == 0)
+			if ((input = g_fopen(argv[arg + 1], "r")) == 0)
 			{
 				perror ("Can't open input file");
 				exit (1);
