@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: relational.c,v 1.54 2008/05/05 14:31:45 c_anthon Exp $
+ * $Id: relational.c,v 1.55 2008/07/13 19:09:35 c_anthon Exp $
  */
 
 #include "config.h"
@@ -38,6 +38,7 @@
 #include "dbprovider.h"
 #include "util.h"
 #include <glib/gi18n.h>
+#include <glib/gstdio.h>
 #include <glib.h>
 
 int RunQueryValue(DBProvider *pdb, const char *query)
@@ -364,7 +365,7 @@ int CreateDatabase(DBProvider *pdb)
 	char buffer[10240];
 	char *pBuf = buffer;
 	char *szFile = BuildFilename("gnubg.sql");
-	FILE *fp = fopen(szFile, "r");
+	FILE *fp = g_fopen(szFile, "r");
 	g_free(szFile);
 	if (!fp)
 		return FALSE;
